examples/test/testpolicy19981.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19981
  namespace: namespace155
spec:
  podSelector:
    matchLabels:
      key46: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value25
          key10: value10
      podSelector:
        matchLabels:
          key37: value38
          key2: value49
          key44: value25
